--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "html-react-parser": "^5.1.16",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
